Refactor `RoomInvitationService` to use `Instant` instead of `LocalDateTime` for expiration handling; update related tests and fixtures.